crates/alder-codegen/src/snapshots/alder_codegen__tests__pipe_forwards_into_first_call_argument.snap
---
source: crates/alder-codegen/src/lib.rs
description: "fn subtract(left: Number, right: Number) Number { left - right }\npub fn answer() Number { 44 |> subtract(2) }\n"
---
function $v_subtract($a0, $a1) {
	let $l0_left = $a0;
	let $l1_right = $a1;
	const $t0 = $l0_left;
	return $t0 - $l1_right;
}
function $v_answer() {
	const $t1 = 44;
	const $t2 = $v_subtract;
	return $t2($t1, 2);
}
export { $v_answer as answer };
